# Cpp

./: README.md
01. Silnia/: CMakeLists.txt  main.cpp
02. Napis wspak/: CMakeLists.txt  main.cpp
03. Palindrom/: CMakeLists.txt  main.cpp
04. Tabliczka mnozenia/: CMakeLists.txt  main.cpp
05.Palindromy liczbowe/: CMakeLists.txt  double_base_palindromes.cpp
06. Potega/: CMakeLists.txt  main.cpp
07.Heurystyka/: CMakeLists.txt  main.cpp
08. Tabliczka mnozenia dynamicznie -/: CMakeLists.txt  main.cpp
09. Algorytm szyfrujacy Polibiusza/: CMakeLists.txt  file.txt  file1  main.cpp
10. Najwiekszy iloczyn liczb/: CMakeLists.txt  main.cpp
11. Najwiekszy iloczyn liczb podanych na wejsciu/: CMakeLists.txt  main.cpp
12. Lista jednokierunkowa/: CMakeLists.txt  main.cpp
13. Tiny url/: CMakeLists.txt  TinyUrl.cpp  TinyUrl.h  main.cpp
14. Roznica czasu/: CMakeLists.txt  MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
15. Zlicznie obiektow/: CCounter.cpp  CCounter.h  (+2 more)
32. Wyswietlanie napisow/: CMakeLists.txt  MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
32. Wyswietlanie napisow/Exceptions/: Exception.cpp  Exception.h  InvalidSequenceException.cpp  InvalidSequenceException.h  NoFIleException.cpp  NoFIleException.h
32. Wyswietlanie napisow/Subtitles/: input.TXT  output.TXT
33. Juwenalia/: Backpack.cpp  Backpack.h  CMakeLists.txt  Food.cpp  Shop.cpp  Shop.h  Student.cpp  Student.h  main.cpp
33. Juwenalia/Eating/: beer.cpp  cookies.cpp  crisps.cpp  orangeJuice.cpp  pepsi.cpp  plasticCups.cpp  sausages.cpp  vodka.cpp  water.cpp  wine.cpp
(+85 files in other folders)
