cmake_minimum_required(VERSION 3.13)
project(33__Juwenalia)

set(CMAKE_CXX_STANDARD 14)

add_executable(33__Juwenalia main.cpp Food.cpp Eating/orangeJuice.cpp Eating/beer.cpp Backpack.cpp Backpack.h
        Eating/water.cpp Eating/pepsi.cpp Eating/wine.cpp Eating/cookies.cpp Eating/crisps.cpp Eating/vodka.cpp
        Eating/sausages.cpp Eating/plasticCups.cpp Student.h Student.cpp Shop.cpp Shop.h)